<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ToyOS</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_grid">Select Instruction</string>
    <string name="title_activity_argument">Enter arguments</string>
	<string name="done_action">Done</string>
	<string name="ok_button_text">OK</string>
	<string name="cancel_button_text">Cancel</string>
	<string name="comment_hint">comment</string>
	<string name="empty_string"></string>
	<string name="action_addline">Add new line</string>
	<string name="action_delete_item">Delete</string>
	<string name="action_assemble">Assemble</string>
	<string name="action_save_text_file">Save source file</string>
	<string name="action_open_text_file">Open source file</string>
	
	<string-array name="registers_array">
	    <item >reg 0</item> 	
	    <item >reg 1</item> 	
	    <item >reg 2</item> 	
	    <item >reg 3</item>
	</string-array> 	
	
</resources>
